# emergency_manager

./: README.md  pyproject.toml
core/: constraints.py  enums.py  hospital.py  patient.py  resources.py  scheduler.py  stay.py
docs/: architecture.md  system_model.md
tests/: test_scheduler.py
