[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emergency-manager"
version = "0.1.0"
description = "Agent-based emergency department logistics system (academic project)"
authors = [
    { name = "Rina", email = "rsquaredata@icloud.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Academic" }

dependencies = []

[tool.setuptools]
packages = ["core"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
